# internal/handler/api.go
@@ -2,7 +2,9 @@ package handler
 
 import (
 	_ "github.com/Pixel-DB/Pixel-DB-API/docs"
+	"github.com/Pixel-DB/Pixel-DB-API/internal/database"
 	"github.com/Pixel-DB/Pixel-DB-API/internal/dto"
+	"github.com/Pixel-DB/Pixel-DB-API/internal/model"
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -13,10 +15,20 @@ import (
 // @Success		200	{object}	dto.APIResponse
 // @Router / [get]
 func Hello(c *fiber.Ctx) error {
+	db := database.DB
+	s := new(model.Stats)
+
+	db.Where(&model.Stats{ID: 1}).First(s)
+
 	respone := dto.APIResponse{
 		Status:  "success",
 		Message: "Hello? I'm okay!",
-		Data:    "",
+		Data: dto.APIResponseData{
+			TotalRequests:    s.RequestCount,
+			TotalUsers:       0,
+			TotalPixelArts:   0,
+			TotalGithubStars: 0,
+		},
 	}
 
 	return c.JSON(respone)
